backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cinema-backend
  template:
    metadata:
      labels:
        app: cinema-backend
    spec:
      containers:
        - name: cinema-backend
          image: mbunda/cinema-backend:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "2048M"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: cinema-backend
  ports:
    - port: 5000
      targetPort: 5000
